ADD_EXECUTABLE(ufs load.cpp /
resource.cpp /
collision.cpp /
parser.cpp /
input.cpp /
main.cpp /
util.cpp /
config.cpp /
settings.cpp /
animation.cpp /
game.cpp /
mapmanager.cpp /
particle.cpp /
sprite/sprite.cpp /
sprite/sun.cpp /
ui/manager.cpp /
ui/window.cpp /
ui/theme.cpp /
ui/widget.cpp /
ui/button.cpp /
ui/dock.cpp /
gui/button/main_menu.cpp /
gui/window/start.cpp /
gui/window/header_menu.cpp /
gui/button/titlebar.cpp )


